fixed issue where no line wrapping with citations

--- a/bi-221-research-proj/stylesheet.css
+++ b/bi-221-research-proj/stylesheet.css
@@ -62,3 +62,6 @@ h2{
 	width: 600px;
 	display: block;
 }
+.span{
+	display: block;
+}
